# simple-synth

./: Cargo.toml  LICENSE  README.md  build.rs
simple-synth-core/: Cargo.toml
simple-synth-core/src/: envelope.rs  filter.rs  lib.rs  voice.rs  voice_manager.rs
simple-synth-core/src/envelope/: linear.rs  mod.rs
simple-synth-core/src/oscillator/: mod.rs  simd.rs
simple-synth-plugin/: Cargo.toml
simple-synth-plugin/src/: editor.rs  lib.rs
src/: audio_engine.rs  commands.rs  envelope.rs  error.rs  gui.rs  lib.rs  main.rs  messages.rs  oscillator.rs  synth_msg.rs  synthesizer.rs  voice.rs  voice_manager.rs
src/audio_engine/: audio_engine.rs  error.rs  mod.rs
src/gui/: gui.rs  mod.rs
src/messages/: messages.rs  mod.rs
src/synthesizer/: envelope.rs  envelope_stage.rs  filter.rs  filter_mode.rs  mod.rs  oscillator.rs  synth.rs  synthesizer.rs  voice.rs  voice_manager.rs  waveform.rs
src/synthesizer/oscillator/: basic.rs  mod.rs
ui/: controls.slint  empty_wrapper.slint  key.slint  keyboard.slint  knob.slint  synth.slint
