[package]
name = "simple-synthesizer"
version = "0.1.0"
edition = "2021"
authors = ["mrnto"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]

[dependencies]
rand = "0.9.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
